# paperbush

./: 404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
api/: index.html
docs/: api.md  dsl.md  examples.md  index.md
dsl/: index.html
examples/: index.html
search/: search_index.json
src/paperbush/: __init__.py  exceptions.py  lib.py  parser.py  utils.py
src/pelargonium/: __init__.py  exceptions.py  utils.py
