[tool.poetry]
name = "paperbush"
version = "0.2.0"
description = "Super concise argument parsing tool"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.2"
ruff = "^0.0.182"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
